# flash-cards-generator

./: package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: deploy.yml
cdk/: .eslintrc.yml  .gitignore  index.ts  package.json  tsconfig.json
cdk/src/: helpers.ts  policy.json
cdk/src/stacks/: iam-stack.ts  ui-content-stack.ts
public/: index.html  main.css  main.js
src/main/: handler.py  main.py
