[tool.poetry]
name = "flash-cards-generator"
version = "0.1.0"
description = ""
authors = ["Pavlo Kozub <pavlo.kozub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
reportlab = "^4.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
